Рефакторинг авторизации: замена JWT на AuthorizationService, обновление security конфигурации